[gd_scene load_steps=3 format=2]

[ext_resource path="res://menu/menuscript.gd" type="Script" id=1]
[ext_resource path="res://progressbar.tscn" type="PackedScene" id=2]

[node name="menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
Main_Screen = ExtResource( 2 )

[node name="start" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -145.0
margin_top = -83.0
margin_right = 145.0
margin_bottom = -39.0
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="options" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -145.5
margin_top = -22.5
margin_right = 145.5
margin_bottom = 22.5
text = "Options"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="exit" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -145.0
margin_top = 35.0
margin_right = 145.0
margin_bottom = 76.0
size_flags_horizontal = 3
text = "Exit"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_up" from="start" to="." method="_on_start_button_up"]
[connection signal="button_up" from="options" to="." method="_on_options_button_up"]
[connection signal="button_up" from="exit" to="." method="_on_exit_button_up"]
